--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                 <input class="form-control" id="signatureLocation" required />
             </div>
             <div class="form-group">
-                <label for="certificate"> X.509 Certificate</label>
+                <label for="certificate"> Signer Private Key</label>
                 <textarea class="form-control" id="certificate" rows="5" required></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Sign XML</button>
